--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.982.0",
+    "@aws-sdk/s3-request-presigner": "^3.982.0",
     "@react-router/node": "7.12.0",
     "@react-router/serve": "7.12.0",
     "drizzle-orm": "^0.45.1",
